# garage-door-status-api

./: README.md  openapi.yaml
garage-status/: Cargo.toml  README.md
garage-status-get/: Cargo.toml  README.md
garage-status-get/src/: http_handler.rs  main.rs
garage-status-get/src/models/: error.rs
garage-status-update/: Cargo.toml
garage-status-update/src/: http_handler.rs
garage-status-update/src/models/: garage_door_status.rs  mod.rs
garage-status/src/: http_handler.rs  main.rs
garage-status/src/models/: mod.rs
