[package]
name = "garage-status"
version = "0.2.0"
edition = "2021"

[dependencies]
lambda_http = "0.15.1"
tokio = { version = "1", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.80.0"